# SpriteUILoader

./: .gitignore  CMakeLists.txt  layoutloader.h  main.cpp  widgetbuilder.cpp  widgetbuilder.h
.github/workflows/: build.yml
src/: elementbuilder.cpp  elementbuilder.h  elementstyler.cpp  elementstyler.h  layoutloader.cpp  layoutloader.h  layoutparseerror.cpp  layoutparseerror.h  main.cpp  managementui.cpp  managementui.h  spriteuiloader.cpp  spriteuiloader.h  widgetbuilder.cpp  widgetbuilder.h  xmlinputwindow.cpp  xmlinputwindow.h
